# phev-http-esp

./: .gitmodules  CMakeLists.txt  sdkconfig  sdkconfig.old
components/msg-core/msg-core/: .travis.yml  CMakeLists.txt
components/msg-core/msg-core/include/: config.h  logger.h  msg_core.h  msg_gcp_mqtt.h  msg_mqtt.h  msg_pipe.h  msg_pipe_splitter.h  msg_tcpip.h  msg_utils.h
components/msg-core/msg-core/src/: msg_core.c  msg_gcp_mqtt.c  msg_mqtt.c  msg_pipe.c  msg_pipe_splitter.c  msg_tcpip.c  msg_utils.c
components/msg-core/msg-core/test/: CMakeLists.txt  msg_core_runner.c  test_msg_core.c  test_msg_gcp_mqtt.c  test_msg_mqtt.c  test_msg_pipe.c  test_msg_pipe_splitter.c  test_msg_tcpip.c  test_msg_utils.c
components/phev-core/: CMakeLists.txt
components/phev-core/phev-core/: .travis.yml  CMakeLists.txt
components/phev-core/phev-core/include/: phev_config.h  phev_controller.h  phev_core.h  phev_model.h  phev_pipe.h  phev_register.h  phev_response_handler.h  phev_service.h
components/phev-core/phev-core/src/: phev_config.c  phev_controller.c  phev_core.c  phev_model.c  phev_pipe.c  phev_register.c  phev_response_handler.c  phev_service.c
components/phev-core/phev-core/test/: CMakeLists.txt  test_phev_config.c  test_phev_controller.c  test_phev_core.c  test_phev_model.c  test_phev_pipe.c  test_phev_register.c  test_phev_response_handler.c  test_phev_service.c  test_runner.c
main/: CMakeLists.txt  main.c
tools/: build.sh
webapp/: battery.js  index.js  manifest.json  package-lock.json  package.json  portal.js  preact.config.js  style.css
(+19 files in other folders)
